--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,23 +25,26 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
           set -e
-          # Conda 初始化
           source ~/.bashrc
-          conda activate myenv
+          conda activate myenv && (
+              TIMESTAMP=$(date +%Y%m%d%H%M%S)
+              mv ~/django_project ~/django_project_backup_$TIMESTAMP || true
 
-          # 部署應用
-          TIMESTAMP=$(date +%Y%m%d%H%M%S)
-          mv ~/django_project ~/django_project_backup_$TIMESTAMP || true
+              if [ -d "~/django_project" ]; then
+                  cd ~/django_project
+                  git pull
+              else
+                  git clone https://github.com/allenshie/stream-forge.git ~/django_project
+                  cd ~/django_project
+              fi
 
-          git clone https://github.com/allenshie/stream-forge.git ~/django_project
-          cd ~/django_project
+              pip install -r requirements.txt
+              python manage.py migrate
+              python manage.py collectstatic --noinput
 
-          pip install -r requirements.txt
-
-          python manage.py migrate
-          python manage.py collectstatic --noinput
-
-          sudo systemctl restart gunicorn
+              sudo systemctl restart gunicorn
+              sudo systemctl restart nginx
+          )
           EOF
 
       # 4. 測試應用程序
@@ -50,9 +53,8 @@ jobs:
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
           set -e
           cd ~/django_project
-          source venv/bin/activate
-
-          # 運行測試
+          source ~/.bashrc
+          conda activate myenv
           pytest --maxfail=1 --disable-warnings -q
           EOF
 
@@ -77,9 +79,9 @@ jobs:
             mv $LATEST_BACKUP ~/django_project
 
             sudo systemctl restart gunicorn
+            sudo systemctl restart nginx
           else
             echo "No backup found for rollback!"
             exit 1
           fi
           EOF
-        
